2005-04-06  Nate Nielsen  <nielsen@memberwebs.com>
    
    * data/seahorse.schemas.in: Fix typo (bug #172826)
    
2005-04-05  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-source.c: 
    * src/seahorse-key-source.h: Added method to import synchronously
    directly on a key source. 
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h: Added method to retrieve all keys
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.glade:
    * libseahorse/seahorse-progress.h: Added support for progress windows
    on a given operation. 
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h: Reworked operation support 
    * data/seahorse.schemas.in: 
    * libseahorse/Makefile.am: 
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-keyserver-control.c:
    * libseahorse/seahorse-keyserver-control.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-prefs.h: 
    * src/seahorse-preferences.c:
    * src/seahorse-preferences.h: Added 'Publish To' key server control, 
    and support for showing an initial tab when opening prefs.
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-multi-source.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-server-source.c:
    * src/Makefile.am
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-search.c:
    * src/seahorse-keyserver-search.glade:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-keyserver-sync.glade:
    * src/seahorse-windows.h: Added support for syncing and publishing keys,
    rearranged main key manager window to accomodate.
    * src/seahorse-ldap-source.c: Don't display error when key already exists
    on server.    
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-operation.c: