@@ -1,3 +1,9 @@
+2005-04-11  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-keyserver-control.c: Fix problems with 
+    'Publish To' keyserver setting losing it's value when prefs
+    dialog is shown. 
+    
 2005-04-06  Nate Nielsen  <nielsen@memberwebs.com>
     
     * data/seahorse.schemas.in: Fix typo (bug #172826)
